--- a/unit1kotlinbasic/app/src/main/res/layout/activity_dice_roller.xml
+++ b/unit1kotlinbasic/app/src/main/res/layout/activity_dice_roller.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".pathway_4.DiceRollerActivity">
 
+    <TextView
+        android:id="@+id/tv_roll_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="24sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/btn_roll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Roll"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_roll_number"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
