--- a/unit1kotlinbasic/app/src/main/res/layout/activity_dice_roller.xml
+++ b/unit1kotlinbasic/app/src/main/res/layout/activity_dice_roller.xml
@@ -6,15 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".pathway_4.DiceRollerActivity">
 
-    <TextView
-        android:id="@+id/tv_roll_number"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/iv_roll_number"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/dice_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="24sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        app:lottie_rawRes="@raw/win"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +36,6 @@
         android:text="Roll"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_roll_number"/>
+        app:layout_constraintTop_toBottomOf="@id/iv_roll_number"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
