--- a/unit2layouts/app/src/main/res/layout/activity_main.xml
+++ b/unit2layouts/app/src/main/res/layout/activity_main.xml
@@ -83,8 +83,8 @@
         android:id="@+id/tip_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tip_amount_text_result"
+        tools:text="15$"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/calculate_button"
-        android:visibility="invisible"/>
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
